<resources>
    <string name="app_name">备忘录</string>
    <string name="action_settings">设置</string>
    
    <!-- Login Related -->
    <string name="app_logo">应用图标</string>
    <string name="login_subtitle">记录生活，管理时间</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="remember_login">记住登录状态</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="demo_users_info">演示账户：\n• user / password\n• zilong / zilong</string>
    <string name="register">注册</string>
    <string name="register_link">还没有账户？点击注册</string>
    <string name="email">邮箱</string>
    <string name="confirm_password">确认密码</string>
    <string name="register_title">创建新账户</string>
    <string name="register_subtitle">加入我们，开始管理您的备忘录</string>
    <string name="already_have_account">已有账户？点击登录</string>
    
    <!-- Common -->
    <string name="loading">加载中...</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="add">添加</string>
    <string name="search">搜索</string>
    
    <!-- Reminder Related -->
    <string name="reminder_title">标题</string>
    <string name="reminder_content">内容</string>
    <string name="reminder_category">分类</string>
    <string name="reminder_priority">优先级</string>
    <string name="new_reminder">新建备忘录</string>
    <string name="edit_reminder">编辑备忘录</string>
    <string name="delete_reminder">删除备忘录</string>
    <string name="delete_reminder_confirm">确定要删除这条备忘录吗？</string>
    <string name="no_reminders">暂无备忘录</string>
    <string name="add_first_reminder">点击添加您的第一条备忘录</string>
    
    <!-- Menu -->
    <string name="menu_search">搜索</string>
    <string name="menu_sort">排序</string>
    <string name="menu_filter">筛选</string>
    <string name="menu_logout">退出登录</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>